# rust_calendar_parser

./: Cargo.toml  Makefile  README.md  event_examples.txt  events_json.json
src/: grammar.pest  lib.rs  main.rs
tests/: grammar_tests.rs
