[package]
name = "rust_calendar_parser"
version = "0.1.1"
edition = "2021"
description = "A parser built in Rust for parsing Google Calendar events using Pest grammar rules and converting them to JSON format."
license = "MIT"
repository = "https://github.com/Inez-git/rust_calendar_parser"

[dependencies]
anyhow = "1.0.93"
pest = "2.7.14"
pest_derive = "2.7.14"
serde_json = "1.0.132"
thiserror = "2.0.3"
